updated some css related to main weather card width now max 100 from 50%.  Additional formatting to size and spacing and font size of five day forcast cards.  Fixed a bug that would throw an error if the first search was a blank search

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,4 +1,4 @@
-button {
+#citySearch {
     border: none;
 
 }
@@ -7,14 +7,37 @@ button {
     font-size: 12px;
 }
 
- .fivedayTemp, .fivedayHumid {
+ .fivedayTemp, .fivedayHumid, .fivedayDate{
     font-size: 13px;
+}
+
+
+h4 span{
+    font-size: 12px;
 }
 
 h5{
     font-size: 18px;
 }
 
+h6 span {
+    margin-top: 1px;
+}
+
 .fa-minus:hover {
     color: red
 }
+
+.card-body {
+    font-weight: bold;
+}
+
+.card-body span{
+    font-size: 12px;
+    font-weight: normal;
+}
+
+.card-title {
+    margin-bottom: 0px;
+}
+
